src/objects/CPQ_Wire_Message__c.object
<CustomObject>
    <fields>
        <fullName>BILL_TO_Country__c</fullName>
        <label>BILL TO Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Company_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Company 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <label>Local Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Wire Message</label>
    <nameField>
        <displayFormat>M-{00}</displayFormat>
        <label>Wire Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wire Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>